# esp-privilege-separation

components/protected/esp_priv_access/: CMakeLists.txt  esp_priv_access_image_utility.c  esp_priv_access_ota_utils.c  esp_priv_access_panic.c  esp_priv_access_setup.c
components/protected/esp_priv_access/include/: esp_priv_access.h
components/protected/esp_priv_access/include/esp32c3/: permc_ll.h
components/protected/esp_syscall/: CMakeLists.txt
components/protected/esp_syscall/src/: esp_syscalls.c
components/protected/esp_user_ota/: CMakeLists.txt
components/shared/drivers/spi/: CMakeLists.txt
components/shared/drivers/ws2812/: CMakeLists.txt
components/shared/esp_priv_build_utils/: CMakeLists.txt  project_include.cmake
components/shared/esp_priv_build_utils/include/: soc_defs.h
components/shared/syscall_shared/: CMakeLists.txt
components/user/idf_stubs/esp_netif/: CMakeLists.txt
components/user/idf_stubs/esp_rom/: CMakeLists.txt
components/user/idf_stubs/esp_system/: CMakeLists.txt
components/user/idf_stubs/esp_wifi/: CMakeLists.txt
components/user/idf_stubs/freertos/: CMakeLists.txt
components/user/startup_utilities/: CMakeLists.txt  startup_utilities.c
components/user/user_console/: user_console.c
examples/blink/: partitions.csv
examples/blink/protected_app/main/: protected_main.c
examples/blink/user_app/: CMakeLists.txt
examples/blink/user_app/main/: user_code.c
